[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/components/player/control_manager/ControlManager.gd" type="Script" id=1]
[ext_resource path="res://fonts/intro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/components/player/control_manager/textures/fly.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/player/control_manager/textures/menu.png" type="Texture" id=4]
[ext_resource path="res://scenes/components/player/control_manager/textures/shield.png" type="Texture" id=5]
[ext_resource path="res://scenes/components/player/control_manager/textures/jump.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[node name="ControlManager" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="Menu" type="Button" parent="."]
margin_right = 62.0
margin_bottom = 56.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Takeoff" type="Button" parent="."]
margin_left = 1632.0
margin_top = 816.0
margin_right = 1744.0
margin_bottom = 922.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = SubResource( 4 )
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Jumping" type="Button" parent="."]
margin_left = 1632.0
margin_top = 816.0
margin_right = 1744.0
margin_bottom = 922.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Shield" type="Button" parent="."]
margin_left = 1632.0
margin_top = 544.0
margin_right = 1744.0
margin_bottom = 650.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="Menu" to="." method="_on_Menu_button_down"]
[connection signal="button_down" from="Takeoff" to="." method="_on_Takeoff_button_down"]
[connection signal="button_up" from="Takeoff" to="." method="_on_Takeoff_button_up"]
[connection signal="button_down" from="Jumping" to="." method="_on_Jumping_button_down"]
[connection signal="button_down" from="Shield" to="." method="_on_Shield_button_down"]
[connection signal="button_up" from="Shield" to="." method="_on_Shield_button_up"]
